[tool.poetry]
name = "brontosaurus"
version = "0.0.1"
description = "Streamlined JSON APIs"
authors = ["Jay R Bolton <jayrbolton@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^19.12.2"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
requests = "^2.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
